add: DeviceAssignmen CRUD and swagger documentation
