# app/Models/Device.php
@@ -14,4 +14,19 @@ class Device extends Model
         'inventory_number',
         'name',
     ];
+
+    public function deviceType()
+    {
+        return $this->belongsTo(DeviceType::class);
+    }
+
+    public function deviceDetails()
+    {
+        return $this->hasMany(DeviceDetail::class);
+    }
+
+    public function deviceAssignments()
+    {
+        return $this->hasMany(DeviceAssignment::class);
+    }
 }
